--- a/src/posts/static/posts/style.css
+++ b/src/posts/static/posts/style.css
@@ -1,3 +1,5 @@
+{% load bootstrap3 %}
+
 @font-face {
   font-family: 'Quicksand', sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
@@ -7,11 +9,13 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Quicksand', sans-serif;
+  color: #707070;
 }
 
-h1, p {
+h1, h2, h3, h4, p {
   margin-top: 10px;
   margin-bottom: 0;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .wrapper {
@@ -22,7 +26,7 @@ h1, p {
 }
 
 .candidate-container {
-  max-width: 1200px;
+  width: 1000px;
   background-color: white;
   border-radius: 4px;
   padding: 30px;
@@ -38,8 +42,8 @@ h1, p {
 }
 
 .avatar-bordered {
-  width: 50px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
@@ -50,23 +54,26 @@ h1, p {
   width: 80%;
   float: left;
   text-align: left;
+  border-radius: 4px;
 }
 
-.greeting-container h1 {
+.greeting-title {
   font-size: 36px;
   font-weight: 700;
-  color: #33BF54;
+  color: #37D19A;
+  text-align: left;
 }
 
-.greeting-container p {
+.greeting-content {
   font-size: 18px;
   font-weight: lighter;
   color: #596E8D;
   line-height: 22px;
+  text-align: left;
 }
 
 .invite-container {
-  width: 1200px;
+  width: 1140px;
   background-color: white;
   border-radius: 4px;
   border: 1px solid #37D19A;
@@ -87,37 +94,49 @@ h1, p {
   text-align: center;
   border: none;
   font-weight: 400;
-  background: transparent linear-gradient(180deg, #33BF54 0%, #38D6AC 100%) 0% 0% no-repeat padding-box
+  background: transparent linear-gradient(180deg, #33BF54 0%, #38D6AC 100%) 0% 0% no-repeat padding-box;
+  margin-bottom: 20px;
 }
 
 .button-container {
   margin-top: 20px;
 }
 
-.curriculum-vitae-container {
-  max-width: 1200px;
+.resume-container {
+  width: 1000px;
   border-radius: 4px;
-  margin: 20px auto;
-  box-sizing: border-box;
-  display: inline-block;
+  align-items: center;
 }
 
 .left-container {
-  width: 80%;
+  width: 70%;
   float: left;
   text-align: left;
 }
 
 .right-container {
-  width: 20%;
+  width: 30%;
   float: left;
   text-align: center;
+  padding-left: 20px;
 }
 
 .about-me {
   background-color: white;
   padding: 30px;
   margin-right: 2px;
+  text-align: left;
+  border-radius: 4px;
+}
+
+.about-me h2 {
+  letter-spacing: -0.6px;
+  font-size: 28px;
+}
+
+.experience-container h2 {
+  letter-spacing: -0.6px;
+  font-size: 28px;
 }
 
 hr {
@@ -127,11 +146,18 @@ hr {
   border-top: 1px solid #eeeeee;
 }
 
+.cv-title {
+  letter-spacing: -0.6px;
+  font-size: 28px;
+}
+
 .experience-container {
   background-color: white;
   padding: 30px;
   margin-right: 2px;
   margin-top: 30px;
+  text-align: left;
+  border-radius: 4px;
 }
 
 .cv-dates {
@@ -147,4 +173,105 @@ hr {
   justify-content: center;
   align-items: center;
   color: #37D19A;
+}
+
+.cv-dates-container {
+  width: 20%;
+  text-align: left;
+  display: flex;
+}
+
+.cv-details-container {
+  width: 80%;
+  text-align: left;
+  display: flex;
+}
+
+.cv-category {
+  font-weight: normal;
+  line-height: 5px;
+}
+
+.cv-category h4 {
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.cv-category p {
+  color: #33BF54;
+  margin-bottom: 30px;
+}
+
+.cv-category span {
+  color: #707070;
+  margin-bottom: 30px;
+}
+
+.column1 {
+  flex: 20%;
+  margin: 20px 0px;
+  padding-right: 10px;
+}
+
+.column2 {
+  flex: 80%;
+  margin: 20px 0px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.cv-completed-container {
+  background: linear-gradient(180deg, #33BF54 0%, #37D19A 100%);
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.cv-completed-header {
+  color: white;
+  padding: 15px;
+  letter-spacing: -0.6px;
+}
+
+.completed-task {
+  background: #F9F9FB 0% 0% no-repeat padding-box;
+  box-shadow: 0px 4px 4px #00000019;
+  border-radius: 7px;
+  opacity: 1;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 10px;
+  color: #707070;
+  align-items: left;
+  padding: 15px;
+}
+
+.completed-task p {
+  margin-top: 0px;
+}
+.questions-task {
+  background: #F9F9FB 0% 0% no-repeat padding-box;
+  box-shadow: 0px 4px 4px #00000019;
+  border-radius: 7px;
+  opacity: 1;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 10px;
+  color: #707070
+}
+
+.questions-task p {
+  padding: 5px;
+}
+
+.cv {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 16px;
+}
+
+.white {
+  background-color: white;
+  padding: 50px;
+  border-radius: 4px;
+  margin: 30px auto;
 }
