--- a/src/posts/templates/posts/index.html
+++ b/src/posts/templates/posts/index.html
@@ -1,4 +1,8 @@
 {% load static %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+
+
 
 <link rel="stylesheet" type="text/css" href="{% static 'posts/style.css' %}">
 
@@ -16,103 +20,169 @@
   {% endfor %}
 
   <div class="wrapper">
-    <div class="candidate-container">
-      <div class="profile-picture">
-        <img class="avatar-bordered" alt="avatar-bordered" src="https://images.unsplash.com/photo-1599566150163-29194dcaad36?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1534&q=80">
-      </div>
-      <div class="greeting-container">
-        <h1>Hola, Candidato</h1>
-        <p>Estamos constantemente verificando si hay vacantes compatibles con tu perfil. Si tienes dudas de cómo funciona Listopro da <a href="" class="">click aquí</a></p>
-      </div>
-    </div>
-    <div class="invite-container">
-      <h1>Felicidades!</h1>
-      <p>Varias empresas te están buscando</p>
-      <p>Tienes 1 invitación nueva</p>
-      <div class="button-container">
-        <button class="btn btn-pry">Ver Invitación</button>
+
+    <div class="container white">
+      <div class="row">
+        <div class="col-2 align-items-center">
+            <img class="avatar-bordered" alt="avatar-bordered" src="https://images.unsplash.com/photo-1599566150163-29194dcaad36?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1534&q=80">
+        </div>
+        <div class="col-10">
+          <h1 class="greeting-title">Hola, Candidato!</h1>
+          <p class="greeting-content">Estamos constantemente verificando si hay vacantes compatibles con tu perfil. Si tienes dudas de cómo funciona Listopro da <a href="" class="">click aquí</a></p>
+        </div>
       </div>
     </div>
-    <div class="curriculum-vitae-container">
-      <div class="left-container">
-        <div class="about-me">
-          <div class="cv-title">
+
+    <div class="container">
+      <div class="alert alert-success" role="alert">
+        <p>Felicidades! Tienes 1 invitación nueva</p>
+        <p><a href="">Ver Invitación</a></p>
+      </div>
+    </div>
+
+
+    <div class="container">
+      <div class="row">
+
+        <div class="col-xl-8">
+          <div class="about-me">
             <h2>Resumen Profesional</h2>
             <hr>
-          </div>
-          <div class="cv-content">
             <p>I have 5 years experience as a front-end developer. I am looking for a job where I can learn from others.</p>
           </div>
-        </div>
-        <div class="experience-container">
-          <div class="cv-title">
+
+          <div class="experience-container">
             <h2>Experiencia Laboral</h2>
             <hr>
-          </div>
-          <div class="cv-content">
-            <div class="cv-dates">
-              <span>2019 - 2020 </span>
-            </div>
-            <div class="cv-details">
-              <div class="cv-category">
-                <h3>Job Position at</h3>
-                <p>Company Name</p>
+
+            <div class="row">
+              <div class="col-2">
+                <div class="cv-dates">
+                  <span>2019 - 2020 </span>
+                </div>
               </div>
-              <div class="job-subcategory">
-                <h3>Job Description</h3>
-                <p>City, Country - Month Year a Month Year</p>
-              </div>
-            </div>
-            <div class="education">
-              <div class="cv-dates">
-                <span>2019 - 2020 </span>
-              </div>
-              <div class="cv-category">
-                <h3>Degree</h3>
-                <p>Level</p>
-              </div>
-              <div class="job-subcategory">
-                <h3>School Name</h3>
-                <p>City, Country - Month Year a Month Year</p>
+
+              <div class="col-10">
+                <div class="cv-category">
+                  <h4>Job Position at</h4>
+                  <p>Company Name</p>
+                </div>
+                <div class="cv-category">
+                  <h4>Job Description</h4>
+                  <p>City, Country <span>- Month Year a Month Year</span></p>
+                </div>
               </div>
             </div>
           </div>
+
+          <div class="experience-container">
+            <h2>Educación</h2>
+            <hr>
+
+            <div class="row">
+              <div class="col-2">
+                <div class="cv-dates">
+                  <span>2019 - 2020 </span>
+                </div>
+              </div>
+
+              <div class="col-10">
+                <div class="cv-category">
+                  <h4>Study Field</h4>
+                  <p>Degree</p>
+                </div>
+                <div class="cv-category">
+                  <h4>School Name</h4>
+                  <p>City, Country <span>- Month Year a Month Year</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="experience-container">
+            <h2>Skills</h2>
+            <hr>
+
+            <div class="row">
+              <div class="col-4">
+                excel
+                three
+              </div>
+
+              <div class="col-4">
+                excel
+                three
+              </div>
+
+              <div class="col-4">
+                excel
+                three
+              </div>
+          </div>
+
         </div>
       </div>
-      <div class="right-container">
-        <div class="cv-completed-container">
-          <div class="cv-completed-header">
-            <h2>Completa tu CV</h2>
-            <H2>76% completado</H2>
-          </div>
-          <div class="completed-task">
-            <p>Sincroniza tu Linkedin</p>
-            <p>+15 pts</p>
-          </div>
-          <div class="completed-task">
-            <p>Agrega tu CV en español</p>
-            <p>+5 pts</p>
-          </div>
-          <div class="completed-task">
-            <p>Agrega tu CV en inglés</p>
-            <p>+10 pts</p>
-          </div>
-          <div class="completed-task">
-            <p>Agrega un Portafolio</p>
-            <p>+5 pts</p>
-          </div>
-          <div class="completed-task">
-            <p>Agrega tu Fortaleza</p>
-            <p>+2 pts</p>
-          </div>
-          <div class="questions-task">
-            <p>Te interesaría trabajar en una startup? Por qué?</p>
-            <input type="text">
-            <button>Siguiente</button>
+
+        <div class="col-xl-4">
+          <div class="cv-completed-container">
+            <div class="cv-completed-header">
+                <h2>Completa tu CV</h2>
+                <h2>76% completado</h2>
+              </div>
+            <div class="row completed-task">
+              <div class="col-8 text-left">
+                <p>Sincroniza tu Linkedin</p>
+              </div>
+              <div class="col-4 text-right">
+                <p>+15 pts</p>
+              </div>
+            </div>
+            <div class="row completed-task">
+              <div class="col-8 text-left">
+                <p>Agrega tu CV en español</p>
+              </div>
+              <div class="col-4 text-right">
+                <p>+5 pts</p>
+              </div>
+            </div>
+            <div class="row completed-task">
+              <div class="col-8 text-left">
+                <p>Agrega tu CV en inglés</p>
+              </div>
+              <div class="col-4 text-right">
+                <p>+10 pts</p>
+              </div>
+            </div>
+            <div class="row completed-task">
+              <div class="col-8 text-left">
+                <p>Agrega un Portafolio</p>
+              </div>
+              <div class="col-4 text-right">
+                <p>+5 pts</p>
+              </div>
+            </div>
+            <div class="row completed-task">
+              <div class="col-8 text-left">
+                <p>Agrega un Fortaleza</p>
+              </div>
+              <div class="col-4 text-right">
+                <p>+2 pts</p>
+              </div>
+            </div>
+            <div class="questions-task">
+              <p>Te interesaría trabajar en una startup? Por qué?</p>
+              <p><input type="text"></p>
+              <p><button class="btn-pry">Siguiente</button></p>
+            </div>
+
           </div>
         </div>
+
       </div>
-    </div>
   </div>
+</div>
+
+
+
 </body>
 </html>
